# the-cat-api

./: LICENSE  README.rst  pyproject.toml
src/the_cat_api/: __init__.py  api.py  client.py  exceptions.py
