[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the_cat_api"
version = "0.1.0"
description = "Asynchronous Python wrapper for The Cat API"
readme = "README.rst"
requires-python = ">= 3.11"
license = {file = "LICENSE"}
authors = [
    {name = "ShadowGry"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "aiohttp >= 3.10.8, < 4"
]

[project.urls]
Repository = "https://github.com/ShadowGry/the-cat-api"
Issues = "https://github.com/ShadowGry/the-cat-api/issues"
